--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: jekyll-theme-modernist
+title : Just For U
+
+author :EndOfFile
+  name : WEI SHILIN
+  email : sysu.weixl@gmail.com
+  instagram : sangrita_
+  twitter : EndOfFile0608
